<resources>
    <string name="app_name">WeatherForecast</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">Network Error</string>
    <string name="network_unavailable">Network unavailable, try again later</string>
    <string name="action_refresh">Refresh</string>
    <string name="location_error">Location Not Available</string>
    <string name="cant_retrieve_location">Can\'t retrieve your location from this device</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_info">Weather Information</string>
    <string name="latitude">Latitude</string>
    <string name="no_value">No Value</string>
    <string name="longitude">Longitude</string>
    <string name="timezone">Time Zone</string>
    <string name="time">Last Update</string>
    <string name="summary">summary</string>
    <string name="temperature">Temperature</string>
    <string name="username">Username:</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
</resources>
